--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,12 @@
       ],
       "@libs/utils/*": [
         "libs/utils/src/*"
+      ],
+      "@libs/upload": [
+        "libs/upload/src"
+      ],
+      "@libs/upload/*": [
+        "libs/upload/src/*"
       ]
     }
   }
