--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./apps/mufin-nestjs/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
@@ -76,7 +78,8 @@
       "^@libs/databases(|/.*)$": "<rootDir>/libs/databases/src/$1",
       "^@libs/encryption(|/.*)$": "<rootDir>/libs/encryption/src/$1",
       "^@libs/utils(|/.*)$": "<rootDir>/libs/utils/src/$1",
-      "^@libs/upload(|/.*)$": "<rootDir>/libs/upload/src/$1"
+      "^@libs/upload(|/.*)$": "<rootDir>/libs/upload/src/$1",
+      "^@libs/health(|/.*)$": "<rootDir>/libs/health/src/$1"
     }
   }
 }
