feat. healthCheck 모듈 구현

--- a/.env.production
+++ b/.env.production
@@ -16,4 +16,4 @@ SUPABASE_AUTH_EXTERNAL_KAKAO_SECRET=HW9cQWexNs6VAQZfTO28guuWXbVEAb2y
 
 NEXT_PUBLIC_YOUTUBE_API_KEY=AIzaSyBKVXuJmmjBD1q6DLz8OWesWWsbWxe8E2k
 NEXT_PUBLIC_LOCATION=https://mufin.vercel.app
-
+NEXT_CLIENT_URL=https://www.mu-fin.com
