--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node_modules-rm": "rm -rf ./**/node_modules ./node_modules ./apps/**/node_modules ./libs/**/node_modules ./yarn.lock ./libs/**/yarn.lock"
   },
   "dependencies": {
+    "@libs/health": "^1.0.0",
     "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
@@ -34,8 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "@libs/health": "^1.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
