--- a/libs/database/tsconfig.lib.json
+++ b/libs/database/tsconfig.lib.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "outDir": "../../dist/libs/database",
+    "rootDir": "./src"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
