--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,11 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@libs/databases": [
-        "libs/databases/src"
+      "@libs/database": [
+        "libs/database/src"
       ],
-      "@libs/databases/*": [
-        "libs/databases/src/*"
+      "@libs/database/*": [
+        "libs/database/src/*"
       ],
       "@libs/encryption": [
         "libs/encryption/src"
