--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,18 @@
       ],
       "@libs/health/*": [
         "libs/health/src/*"
+      ],
+      "@libs/auth": [
+        "libs/auth/src"
+      ],
+      "@libs/auth/*": [
+        "libs/auth/src/*"
+      ],
+      "@libs/tictok": [
+        "libs/tictok/src"
+      ],
+      "@libs/tictok/*": [
+        "libs/tictok/src/*"
       ]
     }
   }
