--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "node_modules-rm": "rm -rf ./**/node_modules ./node_modules ./apps/**/node_modules ./libs/**/node_modules ./yarn.lock ./libs/**/yarn.lock"
   },
   "dependencies": {
-    "@libs/health": "^1.0.0",
     "@libs/database": "^1.0.0",
+    "@libs/health": "^1.0.0",
     "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "qs": "^6.13.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
