feat. kakao 모듈 추가

--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
       "^@libs/upload(|/.*)$": "<rootDir>/libs/upload/src/$1",
       "^@libs/health(|/.*)$": "<rootDir>/libs/health/src/$1",
       "^@libs/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
-      "^@libs/tictok(|/.*)$": "<rootDir>/libs/tictok/src/$1"
+      "^@libs/tictok(|/.*)$": "<rootDir>/libs/tictok/src/$1",
+      "^@libs/kakao(|/.*)$": "<rootDir>/libs/kakao/src/$1"
     }
   }
 }
