feat. aws 모듈 추가

--- a/libs/aws/package.json
+++ b/libs/aws/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@libs/upload",
+  "name": "@libs/aws",
   "version": "1.0.0",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.614.0",
