--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,6 +65,12 @@
       ],
       "@libs/kakao/*": [
         "libs/kakao/src/*"
+      ],
+      "@libs/aws": [
+        "libs/aws/src"
+      ],
+      "@libs/aws/*": [
+        "libs/aws/src/*"
       ]
     }
   }
