feat. 인증 / 인가 로직 구현을 위한 패스포트 패키지 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,9 +49,11 @@
         "libs/health/src/*"
       ],
       "@libs/auth": [
+        "libs/auth/src",
         "libs/auth/src"
       ],
       "@libs/auth/*": [
+        "libs/auth/src/*",
         "libs/auth/src/*"
       ],
       "@libs/tictok": [
