--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -1,4 +1,4 @@
-name: Deploy Server to AWS Elastic Beanstalk
+name: Deploy Dev Server to AWS Elastic Beanstalk
 
 on:
   push:
@@ -48,6 +48,29 @@ jobs:
           touch .env
           echo PORT=8081 >> .env
           echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
+          echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
+          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+          echo DB_DATABASE=${{ secrets.DB_DATABASE }} >> .env
+          echo AUTH_SALT_ROUNDS=${{ secrets.AUTH_SALT_ROUNDS }} >> .env
+          echo AUTH_REPEAT=${{ secrets.AUTH_REPEAT }} >> .env
+          echo AUTH_LENGTH=${{ secrets.AUTH_LENGTH }} >> .env
+          echo TIKTOK_CLIENT_KEY=${{ secrets.TIKTOK_CLIENT_KEY }} >> .env
+          echo TIKTOK_CLIENT_SECRET=${{ secrets.TIKTOK_CLIENT_SECRET }} >> .env
+          echo TIKTOK_OAUTH_REDIRECT_URI=${{ secrets.TIKTOK_OAUTH_REDIRECT_URI }} >> .env
+          echo NEXT_CLIENT_URL=${{ secrets.NEXT_CLIENT_URL }} >> .env
+          echo KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> .env
+          echo KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> .env
+          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
+          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
+          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
+          echo AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} >> .env
+          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
+          echo JWT_EXPIRES_IN=${{ secrets.JWT_EXPIRES_IN }} >> .env
+          echo JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} >> .env
+          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
           cat .env
       # Initialize Node.js
       - name: Install Node.js ${{ matrix.node-version }}
