--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -21,10 +21,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - run: sudo npm install -g yarn typescript
 
       # Install project dependencies, test and build
       - name: Install dependencies
-        run: npm install
+        run: yarn install
       - name: Run build
         run: npm run build
 
@@ -80,11 +81,11 @@ jobs:
 
       # Install project dependencies and build
       - name: Install dependencies
-        run: npm install
+        run: yarn install
       # 필자는 TS 파일들을 빌드해서 dist 폴더에 js 파일들을 만들기 때문에
       # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
       - name: Run build
-        run: npm run build
+        run: yarn build
 
       # Install AWS CLI 2
       - name: Install AWS CLI 2
