chore. github action CI/CD 파이프라인 구축

--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -105,13 +105,14 @@ jobs:
       # Make ZIP file with source code
       # -x는 zip파일 생성 시에 해당 부분들을 제외한다.
       - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*' './src/*' './aws/*' awscliv2.zip
+#        run: zip -r deploy.zip . -x '*.git*' './src/*' './aws/*' awscliv2.zip
+        run: zip -r deploy.zip . -x '*.git*'
 
       # Deploy to Elastic Beanstalk
       # application_name과 environment_name을 꼭 확인하자!
       # 해당 부분은 꼭 같아야 한다!!
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v14
+        uses: einaregilsson/beanstalk-deploy@v21
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
