--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -125,5 +125,5 @@ jobs:
           environment_name: Mufin-server-development-env
           region: ${{ secrets.AWS_REGION }}
           version_label: ${{github.SHA}}-${{ steps.current-time.outputs.formattedTime }}
-          deployment_package: deploy.zip
+          deployment_package: ./deploy.zip
           wait_for_environment_recovery: 300
