--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -33,6 +33,9 @@ jobs:
     name: CD Pipeline
     runs-on: ubuntu-latest
 
+    env:
+      NODE_OPTIONS: "--max_old_space_size=4096"
+
     strategy:
       matrix:
         node-version: [ '20.x' ]
@@ -105,7 +108,7 @@ jobs:
       # -x는 zip파일 생성 시에 해당 부분들을 제외한다.
       - name: Generate deployment package
         #        run: zip -r deploy.zip . -x '*.git*' './src/*' './aws/*' awscliv2.zip
-        run: zip -r deploy.zip . -x '*.git*' './aws/*' awscliv2.zip
+        run: zip -r deploy.zip . -x '*.git*' './src/*' './aws/*' './node_modules' './**/node_modules' awscliv2.zip
 
       # Get Current Time
       - name: Get Current time
