--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -47,9 +47,8 @@ jobs:
       # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
       # 참고로 ElasticBeanstalk에 Node 관련을 배포할 때는,
       - name: Create env file
-        run: |
+        run:
           touch .env
-          #          echo PORT=8081 >> .env
           echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
           echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
@@ -88,7 +87,8 @@ jobs:
       # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
       - name: Run build
         run: yarn build
-
+      - name: Start Server
+        run: yarn start:prod
       # Install AWS CLI 2
       - name: Install AWS CLI 2
         run: |
