fix. nginx 설정 추가

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "ag-ent",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": "^20.12.2"
+  },
   "workspaces": [
     "apps/*",
     "libs/*"
