--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -47,7 +47,7 @@ jobs:
       # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
       # 참고로 ElasticBeanstalk에 Node 관련을 배포할 때는,
       - name: Create env file
-        run:
+        run: |
           touch .env
           echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
           echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
