chore. start 스크립트 변경

--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -51,6 +51,7 @@ jobs:
           touch .env
           echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
           echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
+          echo PORT=${{ secrets.PORT  }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
@@ -87,8 +88,8 @@ jobs:
       # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
       - name: Run build
         run: yarn build
-#      - name: Start Server
-#        run: yarn start:prod
+      #      - name: Start Server
+      #        run: yarn start:prod
       # Install AWS CLI 2
       - name: Install AWS CLI 2
         run: |
