--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -46,35 +46,35 @@ jobs:
       # env 파일을 이용할 일이 보통 많은데,
       # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
       # 참고로 ElasticBeanstalk에 Node 관련을 배포할 때는,
-      - name: Create env file
-        run: |
-          touch .env
-          echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
-          echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
-          echo PORT=${{ secrets.PORT  }} >> .env
-          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
-          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
-          echo DB_DATABASE=${{ secrets.DB_DATABASE }} >> .env
-          echo AUTH_SALT_ROUNDS=${{ secrets.AUTH_SALT_ROUNDS }} >> .env
-          echo AUTH_REPEAT=${{ secrets.AUTH_REPEAT }} >> .env
-          echo AUTH_LENGTH=${{ secrets.AUTH_LENGTH }} >> .env
-          echo TIKTOK_CLIENT_KEY=${{ secrets.TIKTOK_CLIENT_KEY }} >> .env
-          echo TIKTOK_CLIENT_SECRET=${{ secrets.TIKTOK_CLIENT_SECRET }} >> .env
-          echo TIKTOK_OAUTH_REDIRECT_URI=${{ secrets.TIKTOK_OAUTH_REDIRECT_URI }} >> .env
-          echo NEXT_CLIENT_URL=${{ secrets.NEXT_CLIENT_URL }} >> .env
-          echo KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> .env
-          echo KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> .env
-          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
-          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
-          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
-          echo AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} >> .env
-          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
-          echo JWT_EXPIRES_IN=${{ secrets.JWT_EXPIRES_IN }} >> .env
-          echo JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} >> .env
-          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
-          cat .env
+#      - name: Create env file
+#        run: |
+#          touch .env
+#          echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
+#          echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
+#          echo PORT=${{ secrets.PORT  }} >> .env
+#          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+#          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+#          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
+#          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+#          echo DB_DATABASE=${{ secrets.DB_DATABASE }} >> .env
+#          echo AUTH_SALT_ROUNDS=${{ secrets.AUTH_SALT_ROUNDS }} >> .env
+#          echo AUTH_REPEAT=${{ secrets.AUTH_REPEAT }} >> .env
+#          echo AUTH_LENGTH=${{ secrets.AUTH_LENGTH }} >> .env
+#          echo TIKTOK_CLIENT_KEY=${{ secrets.TIKTOK_CLIENT_KEY }} >> .env
+#          echo TIKTOK_CLIENT_SECRET=${{ secrets.TIKTOK_CLIENT_SECRET }} >> .env
+#          echo TIKTOK_OAUTH_REDIRECT_URI=${{ secrets.TIKTOK_OAUTH_REDIRECT_URI }} >> .env
+#          echo NEXT_CLIENT_URL=${{ secrets.NEXT_CLIENT_URL }} >> .env
+#          echo KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> .env
+#          echo KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> .env
+#          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
+#          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
+#          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
+#          echo AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} >> .env
+#          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
+#          echo JWT_EXPIRES_IN=${{ secrets.JWT_EXPIRES_IN }} >> .env
+#          echo JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} >> .env
+#          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
+#          cat .env
       # Initialize Node.js
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -90,6 +90,9 @@ jobs:
         run: yarn build
       #      - name: Start Server
       #        run: yarn start:prod
+
+      - name: nodecommand
+        run: cp config/integration.Procfile Procfile
       # Install AWS CLI 2
       - name: Install AWS CLI 2
         run: |
@@ -125,9 +128,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: mufin-server-development
+          application_name: mufin-server
           environment_name: Mufin-server-development-env
           region: ${{ secrets.AWS_REGION }}
           version_label: ${{github.SHA}}-${{ steps.current-time.outputs.formattedTime }}
-          deployment_package: ./deploy.zip
+          deployment_package: deploy.zip
           wait_for_environment_recovery: 300
