--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -26,6 +26,17 @@ jobs:
       # Install project dependencies, test and build
       - name: Install dependencies
         run: yarn install
+
+#      - name: Prepare .env file
+#        uses: nohmad/aws-ssm-parameter-store-action@master
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: ap-northeast-2
+#          path: ${{ secrets.DEV_PARAMETER_STORE_PATH }}
+#          format: dotenv
+#          filename: .env
+
       - name: Run build
         run: npm run build
 
@@ -46,35 +57,35 @@ jobs:
       # env 파일을 이용할 일이 보통 많은데,
       # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
       # 참고로 ElasticBeanstalk에 Node 관련을 배포할 때는,
-#      - name: Create env file
-#        run: |
-#          touch .env
-#          echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
-#          echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
-#          echo PORT=${{ secrets.PORT  }} >> .env
-#          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-#          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-#          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
-#          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
-#          echo DB_DATABASE=${{ secrets.DB_DATABASE }} >> .env
-#          echo AUTH_SALT_ROUNDS=${{ secrets.AUTH_SALT_ROUNDS }} >> .env
-#          echo AUTH_REPEAT=${{ secrets.AUTH_REPEAT }} >> .env
-#          echo AUTH_LENGTH=${{ secrets.AUTH_LENGTH }} >> .env
-#          echo TIKTOK_CLIENT_KEY=${{ secrets.TIKTOK_CLIENT_KEY }} >> .env
-#          echo TIKTOK_CLIENT_SECRET=${{ secrets.TIKTOK_CLIENT_SECRET }} >> .env
-#          echo TIKTOK_OAUTH_REDIRECT_URI=${{ secrets.TIKTOK_OAUTH_REDIRECT_URI }} >> .env
-#          echo NEXT_CLIENT_URL=${{ secrets.NEXT_CLIENT_URL }} >> .env
-#          echo KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> .env
-#          echo KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> .env
-#          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
-#          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
-#          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
-#          echo AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} >> .env
-#          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
-#          echo JWT_EXPIRES_IN=${{ secrets.JWT_EXPIRES_IN }} >> .env
-#          echo JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} >> .env
-#          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
-#          cat .env
+      #      - name: Create env file
+      #        run: |
+      #          touch .env
+      #          echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
+      #          echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
+      #          echo PORT=${{ secrets.PORT  }} >> .env
+      #          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+      #          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+      #          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
+      #          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+      #          echo DB_DATABASE=${{ secrets.DB_DATABASE }} >> .env
+      #          echo AUTH_SALT_ROUNDS=${{ secrets.AUTH_SALT_ROUNDS }} >> .env
+      #          echo AUTH_REPEAT=${{ secrets.AUTH_REPEAT }} >> .env
+      #          echo AUTH_LENGTH=${{ secrets.AUTH_LENGTH }} >> .env
+      #          echo TIKTOK_CLIENT_KEY=${{ secrets.TIKTOK_CLIENT_KEY }} >> .env
+      #          echo TIKTOK_CLIENT_SECRET=${{ secrets.TIKTOK_CLIENT_SECRET }} >> .env
+      #          echo TIKTOK_OAUTH_REDIRECT_URI=${{ secrets.TIKTOK_OAUTH_REDIRECT_URI }} >> .env
+      #          echo NEXT_CLIENT_URL=${{ secrets.NEXT_CLIENT_URL }} >> .env
+      #          echo KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> .env
+      #          echo KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> .env
+      #          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
+      #          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
+      #          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
+      #          echo AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} >> .env
+      #          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
+      #          echo JWT_EXPIRES_IN=${{ secrets.JWT_EXPIRES_IN }} >> .env
+      #          echo JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} >> .env
+      #          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
+      #          cat .env
       # Initialize Node.js
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
