--- a/.ebextensions/options.config
+++ b/.ebextensions/options.config
@@ -1,4 +1,3 @@
 option_settings:
     - namespace: aws:elasticbeanstalk:application:environment
-      option_name: PORT
-      value: 5000
+        PORT: 3000
