--- a/.ebextensions/options.config
+++ b/.ebextensions/options.config
@@ -1,3 +1,3 @@
 option_settings:
-    - namespace: aws:elasticbeanstalk:application:environment
+    - aws: elasticbeanstalk:application:environment
         PORT: 3000
