test. CI/CD 테스트

--- a/.ebextensions/options.config
+++ b/.ebextensions/options.config
@@ -1,3 +1,4 @@
 option_settings:
-    - aws: elasticbeanstalk:application:environment
-        PORT: 3000
+    - namespace: aws:elasticbeanstalk:application:environment
+      option_name: PORT
+      value: 3000
