test. CI/CD 테스트

--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -23,6 +23,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: sudo npm install -g yarn typescript
 
+      - name: Install Nest Cli
+        run: yarn global add @nestjs/cli
+
       # Install project dependencies, test and build
       - name: Install dependencies
         run: yarn install
