--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -41,7 +41,7 @@ jobs:
 #          filename: .env
 
       - name: Run build
-        run: npm run build
+        run: yarn build
 
   deploy:
     name: CD Pipeline
@@ -90,18 +90,18 @@ jobs:
       #          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
       #          cat .env
       # Initialize Node.js
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
+#      - name: Install Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: ${{ matrix.node-version }}
 
       # Install project dependencies and build
-      - name: Install dependencies
-        run: yarn install
-      # 필자는 TS 파일들을 빌드해서 dist 폴더에 js 파일들을 만들기 때문에
-      # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
-      - name: Run build
-        run: yarn build
+#      - name: Install dependencies
+#        run: yarn install
+#      # 필자는 TS 파일들을 빌드해서 dist 폴더에 js 파일들을 만들기 때문에
+#      # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
+#      - name: Run build
+#        run: yarn build
       #      - name: Start Server
       #        run: yarn start:prod
 
