--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -89,6 +89,17 @@ jobs:
       #          echo JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} >> .env
       #          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
       #          cat .env
+
+      - name: Prepare .env file
+        uses: nohmad/aws-ssm-parameter-store-action@master
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          path: /${{ secrets.PROJECT_NAME }}/${{ secrets.NODE_ENV }}
+          format: dotenv
+          filename: .env
+
       # Initialize Node.js
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
