chore. nohmad/aws-ssm-parameter-store-action@master 추가

--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -96,7 +96,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-          path: /${{ secrets.PROJECT_NAME }}/${{ secrets.NODE_ENV }}
+#          path: /${{ secrets.PROJECT_NAME }}/${{ secrets.NODE_ENV }}
+          path: /mufin-server/development
           format: dotenv
           filename: .env
 
