chore. nohmad/aws-ssm-parameter-store-action@master 추가

--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -97,7 +97,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 #          path: /${{ secrets.PROJECT_NAME }}/${{ secrets.NODE_ENV }}
-          path: /mufin-server/development
+          path: /mufin-server/${{secrets.NODE_ENV}}
           format: dotenv
           filename: .env
 
