chore. nohmad/aws-ssm-parameter-store-action@master 추가

--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -30,15 +30,15 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-#      - name: Prepare .env file
-#        uses: nohmad/aws-ssm-parameter-store-action@master
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-region: ap-northeast-2
-#          path: ${{ secrets.DEV_PARAMETER_STORE_PATH }}
-#          format: dotenv
-#          filename: .env
+      #      - name: Prepare .env file
+      #        uses: nohmad/aws-ssm-parameter-store-action@master
+      #        with:
+      #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #          aws-region: ap-northeast-2
+      #          path: ${{ secrets.DEV_PARAMETER_STORE_PATH }}
+      #          format: dotenv
+      #          filename: .env
 
       - name: Run build
         run: yarn build
@@ -96,8 +96,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-#          path: /${{ secrets.PROJECT_NAME }}/${{ secrets.NODE_ENV }}
-          path: /mufin-server/${{secrets.NODE_ENV}}
+          path: ${{ secrets.DEV_SSM_PATH }}
           format: dotenv
           filename: .env
 
