--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -60,35 +60,6 @@ jobs:
       # env 파일을 이용할 일이 보통 많은데,
       # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
       # 참고로 ElasticBeanstalk에 Node 관련을 배포할 때는,
-      #      - name: Create env file
-      #        run: |
-      #          touch .env
-      #          echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
-      #          echo SERVER_URL=${{ secrets.SERVER_URL }} >> .env
-      #          echo PORT=${{ secrets.PORT  }} >> .env
-      #          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-      #          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-      #          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
-      #          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
-      #          echo DB_DATABASE=${{ secrets.DB_DATABASE }} >> .env
-      #          echo AUTH_SALT_ROUNDS=${{ secrets.AUTH_SALT_ROUNDS }} >> .env
-      #          echo AUTH_REPEAT=${{ secrets.AUTH_REPEAT }} >> .env
-      #          echo AUTH_LENGTH=${{ secrets.AUTH_LENGTH }} >> .env
-      #          echo TIKTOK_CLIENT_KEY=${{ secrets.TIKTOK_CLIENT_KEY }} >> .env
-      #          echo TIKTOK_CLIENT_SECRET=${{ secrets.TIKTOK_CLIENT_SECRET }} >> .env
-      #          echo TIKTOK_OAUTH_REDIRECT_URI=${{ secrets.TIKTOK_OAUTH_REDIRECT_URI }} >> .env
-      #          echo NEXT_CLIENT_URL=${{ secrets.NEXT_CLIENT_URL }} >> .env
-      #          echo KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> .env
-      #          echo KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> .env
-      #          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
-      #          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
-      #          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
-      #          echo AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} >> .env
-      #          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
-      #          echo JWT_EXPIRES_IN=${{ secrets.JWT_EXPIRES_IN }} >> .env
-      #          echo JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} >> .env
-      #          echo JWT_REFRESH_EXPIRES_IN=${{ secrets.JWT_REFRESH_EXPIRES_IN }} >> .env
-      #          cat .env
 
       - name: Prepare .env file
         uses: nohmad/aws-ssm-parameter-store-action@master
@@ -101,18 +72,18 @@ jobs:
           filename: .env
 
       # Initialize Node.js
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
+#      - name: Install Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: ${{ matrix.node-version }}
 
-      # Install project dependencies and build
-      - name: Install dependencies
-        run: yarn install
-      # 필자는 TS 파일들을 빌드해서 dist 폴더에 js 파일들을 만들기 때문에
-      # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
-      - name: Run build
-        run: yarn build
+#      # Install project dependencies and build
+#      - name: Install dependencies
+#        run: yarn install
+#      # 필자는 TS 파일들을 빌드해서 dist 폴더에 js 파일들을 만들기 때문에
+#      # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
+#      - name: Run build
+#        run: yarn build
       #      - name: Start Server
       #        run: yarn start:prod
 
