--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -5,43 +5,43 @@ on:
     branches:
       - dev
 jobs:
-  buildAndTest:
-    name: CI Pipeline
-    runs-on: ubuntu-latest
-    strategy:
-      # Node version은 20 버전을 이용한다.
-      matrix:
-        node-version: [ '20.x' ]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      # Initialize Node.js
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: sudo npm install -g yarn typescript
-
-      - name: Install Nest Cli
-        run: yarn global add @nestjs/cli
-
-      # Install project dependencies, test and build
-      - name: Install dependencies
-        run: yarn install
-
-      #      - name: Prepare .env file
-      #        uses: nohmad/aws-ssm-parameter-store-action@master
-      #        with:
-      #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #          aws-region: ap-northeast-2
-      #          path: ${{ secrets.DEV_PARAMETER_STORE_PATH }}
-      #          format: dotenv
-      #          filename: .env
-
-      - name: Run build
-        run: yarn build
+  #  buildAndTest:
+  #    name: CI Pipeline
+  #    runs-on: ubuntu-latest
+  #    strategy:
+  #      # Node version은 20 버전을 이용한다.
+  #      matrix:
+  #        node-version: [ '20.x' ]
+  #
+  #    steps:
+  #      - uses: actions/checkout@v4
+  #
+  #      # Initialize Node.js
+  #      - name: Install Node.js ${{ matrix.node-version }}
+  #        uses: actions/setup-node@v4
+  #        with:
+  #          node-version: ${{ matrix.node-version }}
+  #      - run: sudo npm install -g yarn typescript
+  #
+  #      - name: Install Nest Cli
+  #        run: yarn global add @nestjs/cli
+  #
+  #      # Install project dependencies, test and build
+  #      - name: Install dependencies
+  #        run: yarn install
+  #
+  #      #      - name: Prepare .env file
+  #      #        uses: nohmad/aws-ssm-parameter-store-action@master
+  #      #        with:
+  #      #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #      #          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #      #          aws-region: ap-northeast-2
+  #      #          path: ${{ secrets.DEV_PARAMETER_STORE_PATH }}
+  #      #          format: dotenv
+  #      #          filename: .env
+  #
+  #      - name: Run build
+  #        run: yarn build
 
   deploy:
     name: CD Pipeline
@@ -54,12 +54,14 @@ jobs:
       matrix:
         node-version: [ '20.x' ]
     # 위의 buildAndTest가 실행되고 진행된다.
-    needs: buildAndTest
+    #    needs: buildAndTest
     steps:
       - uses: actions/checkout@v4
       # env 파일을 이용할 일이 보통 많은데,
       # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
       # 참고로 ElasticBeanstalk에 Node 관련을 배포할 때는,
+      - name: Installing module
+        run: yarn
 
       - name: Prepare .env file
         uses: nohmad/aws-ssm-parameter-store-action@master
@@ -72,20 +74,18 @@ jobs:
           filename: .env
 
       # Initialize Node.js
-#      - name: Install Node.js ${{ matrix.node-version }}
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: ${{ matrix.node-version }}
+      #      - name: Install Node.js ${{ matrix.node-version }}
+      #        uses: actions/setup-node@v4
+      #        with:
+      #          node-version: ${{ matrix.node-version }}
 
-#      # Install project dependencies and build
-#      - name: Install dependencies
-#        run: yarn install
-#      # 필자는 TS 파일들을 빌드해서 dist 폴더에 js 파일들을 만들기 때문에
-#      # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
-#      - name: Run build
-#        run: yarn build
-      #      - name: Start Server
-      #        run: yarn start:prod
+      #      # Install project dependencies and build
+      #      - name: Install dependencies
+      #        run: yarn install
+      #      # 필자는 TS 파일들을 빌드해서 dist 폴더에 js 파일들을 만들기 때문에
+      #      # 아래에서 zip 파일 구성 시 src 폴더를 제외한 것을 확인할 수 있다.
+      - name: Run build
+        run: yarn build
 
       - name: nodecommand
         run: cp config/Procfile Procfile
