--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -125,8 +125,9 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: mufin-server
           environment_name: Mufin-server-development-env
-          bucket_name: elasticbeanstalk-ap-northeast-2-329599642463
+          existing_bucket_name: elasticbeanstalk-ap-northeast-2-329599642463
           region: ${{ secrets.AWS_REGION }}
           version_label: ${{github.SHA}}-${{ steps.current-time.outputs.formattedTime }}
           deployment_package: deploy.zip
           wait_for_environment_recovery: 300
+          use_existing_version_if_available: true
