--- a/.github/workflows/deploy-dev-server-aeb.yml
+++ b/.github/workflows/deploy-dev-server-aeb.yml
@@ -5,44 +5,6 @@ on:
     branches:
       - dev
 jobs:
-  #  buildAndTest:
-  #    name: CI Pipeline
-  #    runs-on: ubuntu-latest
-  #    strategy:
-  #      # Node version은 20 버전을 이용한다.
-  #      matrix:
-  #        node-version: [ '20.x' ]
-  #
-  #    steps:
-  #      - uses: actions/checkout@v4
-  #
-  #      # Initialize Node.js
-  #      - name: Install Node.js ${{ matrix.node-version }}
-  #        uses: actions/setup-node@v4
-  #        with:
-  #          node-version: ${{ matrix.node-version }}
-  #      - run: sudo npm install -g yarn typescript
-  #
-  #      - name: Install Nest Cli
-  #        run: yarn global add @nestjs/cli
-  #
-  #      # Install project dependencies, test and build
-  #      - name: Install dependencies
-  #        run: yarn install
-  #
-  #      #      - name: Prepare .env file
-  #      #        uses: nohmad/aws-ssm-parameter-store-action@master
-  #      #        with:
-  #      #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #      #          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #      #          aws-region: ap-northeast-2
-  #      #          path: ${{ secrets.DEV_PARAMETER_STORE_PATH }}
-  #      #          format: dotenv
-  #      #          filename: .env
-  #
-  #      - name: Run build
-  #        run: yarn build
-
   deploy:
     name: CD Pipeline
     runs-on: ubuntu-latest
@@ -57,8 +19,8 @@ jobs:
     #    needs: buildAndTest
     steps:
       - uses: actions/checkout@v4
-          # env 파일을 이용할 일이 보통 많은데,
-          # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
+        # env 파일을 이용할 일이 보통 많은데,
+        # Github Secrets를 이용하여 env 파일을 만들고 추가한다.
         # 참고로 ElasticBeanstalk에 Node 관련을 배포할 때는,
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -109,7 +71,7 @@ jobs:
       # -x는 zip파일 생성 시에 해당 부분들을 제외한다.
       - name: Generate deployment package
         #        run: zip -r deploy.zip . -x '*.git*' './src/*' './aws/*' awscliv2.zip
-        run: zip -r deploy.zip ./ -x '*.git*' './src/*' './aws/*' './node_modules' './**/node_modules' awscliv2.zip
+        run: zip -r deploy.zip ./ -x '*.git*' './src/*' './aws/*' awscliv2.zip
 
       # Get Current Time
       - name: Get Current time
@@ -128,8 +90,7 @@ jobs:
           application_name: mufin-server
           environment_name: Mufin-server-development-env
           region: ${{ secrets.AWS_REGION }}
-#          version_label: ${{github.SHA}}-${{ steps.current-time.outputs.formattedTime }}
           version_label: ${{ steps.current-time.outputs.formattedTime }}_${{ github.run_number }}
-          deployment_package: ./deploy.zip
-#          existing_bucket_name: elasticbeanstalk-ap-northeast-2-329599642463
+          deployment_package: deploy.zip
+          existing_bucket_name: elasticbeanstalk-ap-northeast-2-329599642463
 #          wait_for_environment_recovery: 300
