chore. youtube 연동을 위한 관련 패키지 추가

--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
       "^@libs/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
       "^@libs/tictok(|/.*)$": "<rootDir>/libs/tictok/src/$1",
       "^@libs/kakao(|/.*)$": "<rootDir>/libs/kakao/src/$1",
-      "^@libs/aws(|/.*)$": "<rootDir>/libs/aws/src/$1"
+      "^@libs/aws(|/.*)$": "<rootDir>/libs/aws/src/$1",
+      "^@libs/google-apis(|/.*)$": "<rootDir>/libs/google-apis/src/$1"
     }
   }
 }
