--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,11 @@ services:
     volumes:
       - /usr/src/app/**/**/node_modules # local 의 node_modules 을 참조
       - ./:/user/src/app # local 의 코드를 참조
-  redis:
-    image: "redis"
+#  redis:
+#    image: "redis"
   db:
     image: "postgres"
+
 #    volumes:
 #      - .:/code
 #    depends_on:
