--- a/libs/database/package.json
+++ b/libs/database/package.json
@@ -1,14 +1,7 @@
 {
   "name": "@libs/database",
   "version": "1.0.0",
-  "scripts": {
-    "typeorm": "node -r ts-node/register node_modules/typeorm/cli.js",
-    "typeorm:d": "node -r ts-node/register node_modules/typeorm/cli.js -d src/config/database.config.ts",
-    "migration:create": "yarn typeorm migration:create ./src/migrations/create-table",
-    "migration:generate": "yarn typeorm  migration:generate -d src/config/database.config.ts",
-    "migration:run": "yarn typeorm  migration:run -d src/config/database.config.ts",
-    "migration:revert": "yarn typeorm migration:revert"
-  },
+  "scripts": {},
   "dependencies": {
     "@nestjs/typeorm": "^10.0.2",
     "pg": "^8.12.0",
