feat. nginx 도커 설정 및 데이터베이스 도커 설정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,35 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "4000:4000"
+      - "3000"
     volumes:
       - /usr/src/app/**/**/node_modules # local 의 node_modules 을 참조
       - ./:/user/src/app # local 의 코드를 참조
-#  redis:
-#    image: "redis"
+    container_name: mufin-server
+  #  redis:
+  #    image: "redis"
+  nginx:
+    image: "nginx"
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    restart: always
+  #    depends_on:
+  #      - mufin-server
   db:
     image: "postgres"
-
-#    volumes:
-#      - .:/code
-#    depends_on:
-#      - db
-#  db:
-#    image: postgres
-#    volumes:
-#      - db-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    build:
+      context: ./libs/database
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    volumes:
+      - ./libs/database/data:/var/lib/postgresql/data
+      - ./libs/database/init:/docker-entrypoint-initdb.d/
+    environment:
+      POSTGRES_USER: mufin
+      POSTGRES_PASSWORD: CXszO*1}!agmEi1$~
+      POSTGRES_DB: mufin
