fix. 빌드 옵션 수정

--- a/apps/mufin-nestjs/tsconfig.app.json
+++ b/apps/mufin-nestjs/tsconfig.app.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "declaration": false,
     "outDir": "../../dist/apps/mufin-nestjs"
+//    "outDir": "../../dist/mufin-nestjs"
   },
-  "include": ["src/**/*"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
