fix. 빌드 옵션 수정 & docker-compose 이슈 사항 수정

--- a/apps/mufin-nestjs/tsconfig.app.json
+++ b/apps/mufin-nestjs/tsconfig.app.json
@@ -2,8 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/mufin-nestjs"
-//    "outDir": "../../dist/mufin-nestjs"
+//    "outDir": "../../dist/apps/mufin-nestjs"
+    "outDir": "../../dist/mufin-nestjs"
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
