--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,12 +4,19 @@
 #
 # }
 
-upstream mufin-server {
-        server mufin-server:4000;
-    }
-    server {
-        listen 80;
-        location / {
-            proxy_pass http://mufin-server;
-        }
-    }
+upstream mufin-server
+{
+	server backend:4000;
+}
+
+
+server
+{
+	listen 80;
+	server_name localhost;
+
+	location /api
+	{
+		proxy_pass http://mufin-server;
+	}
+}
