--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "node dist/apps/mufin-nestjs/apps/mufin-nestjs/src/main.js",
+    "start": "node dist/mufin-nestjs/apps/mufin-nestjs/src/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/mufin-nestjs/main",
+    "start:prod": "node dist/mufin-nestjs/apps/mufin-nestjs/src/main.js",
     "deploy:dev": "npm install && npm run build && npm run start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
