--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,3 @@
 FROM nginx
-#COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/nginx.conf
-#COPY ./nginx.conf /etc/nginx/nginx.conf
+
+COPY ./config/nginx.conf /etc/nginx/conf.d/nginx.conf
