fix. 빌드 옵션 수정 & docker-compose 이슈 사항 수정중

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     volumes:
       - /usr/src/app/node_modules # local 의 node_modules 을 참조
       - ./:/usr/src/app # local 의 코드를 참조
-    container_name: nestjs
+    container_name: "nestjs"
 #    command: [ "yarn", "start:prod" ]
     depends_on:
       - db
