--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -1,10 +1,9 @@
 http
 {
-    upstream backend {
+    upstream api {
         server nestjs:4000;
     }
-	server
-	{
+	server {
 		listen 80;
 		server_name localhost;
 	    access_log  /var/log/nginx/host.access.log  main;
@@ -13,9 +12,12 @@ http
 #             resolver 127.0.0.11 valid=30s;
 #             resolver_timeout 10s;
 
-		    set $upstream_endpoint http://backend;
-			proxy_pass $upstream_endpoint;
-# 			proxy_http_version 1.1;
+# 		    set $upstream_endpoint http://nestjs:4000;
+			proxy_pass http://api;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
 		}
 	}
 # 	include /etc/nginx/conf.d/*.conf;
