--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -1,6 +1,5 @@
-http
-{
-    upstream api {
+http {
+    upstream nestjs {
         server nestjs:4000;
     }
 	server {
@@ -13,12 +12,12 @@ http
 #             resolver_timeout 10s;
 
 # 		    set $upstream_endpoint http://nestjs:4000;
-			proxy_pass http://api;
+			proxy_pass http://nestjs;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
 		}
 	}
-# 	include /etc/nginx/conf.d/*.conf;
 }
+# 	include /etc/nginx/conf.d/*.conf;
